--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 
-Changes in libuca 0.6.0
-=======================
+Changes in libuca 1.0 aka 0.6
+=============================
 
 GObject Type System
 -------------------
