Add notice about the plugin manager

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Changes in libuca 1.1
+=====================
+
+Plugin System
+-------------
+
+A new plugin manager is used to instantiate camera objects from a shared
+library. Instead of calling `uca_camera_new`, a plugin manager is created that
+looks in pre- and user-defined directories for DSOs that match
+`libuca[A-Za-z].so` and used to instantiate:
+
+    UcaPluginManager *manager;
+    UcaCamera *camera;
+
+    manager = uca_plugin_manager_new ();
+    camera = uca_plugin_manager_new_camera (manager, "foo", &error);
+
+The plugin manager adds a dependency on GModule (pkg-config package
+`gmodule-2.0`) that is part of GLib.
+
 
 Changes in libuca 1.0 aka 0.6
 =============================
