--- a/NEWS
+++ b/NEWS
@@ -22,9 +22,20 @@ Minor changes
 -------------
 
 - It is now possible to generate GObject introspection meta data to bind libuca
-  to all languages that support GObject introspection.
-- Added uca_camera_stop_readout() to cleanup after using
+  to all languages that support GObject introspection. A first experiment of
+  UcaDevice using this was successful and the camera showed up in Jive.
+
+- Added virtual function uca_camera_stop_readout() to cleanup after using
   uca_camera_start_readout().
+
+- There is now a mechanism to register and query physical units of camera
+  properties. Camera plugins must call uca_camera_register_unit() for each
+  property that they want to have a physical unit (e.g. UCA_UNIT_SECOND)
+  attached to. Client programs can get this information with
+  uca_camera_get_unit().
+
+- The control GUI learned some new tricks: live histogram, zooming and recording
+  into an internal ring buffer.
 
 
 Changes in libuca 1.0 aka 0.6
