--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
 Changelog
 =========
 
+Changes in libuca 1.3
+---------------------
+
+### Minor changes
+
+- Added `sensor-pixel-width` and `sensor-pixel-height` to describe the cameras
+  pixel size in meters.
+
+
 Changes in libuca 1.2
 ---------------------
 
