--- a/plugins/dexela/changelog.txt
+++ b/plugins/dexela/changelog.txt
@@ -1,3 +1,5 @@
+* Tue Oct 15 2013 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.2-2
+- bump libuca requirement to 1.3.0
 * Wed Mar 27 2013 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.2-1
 - return current width and height as rois
 * Thu Mar 14 2013 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.0-3
