--- a/plugins/pylon/changelog.txt
+++ b/plugins/pylon/changelog.txt
@@ -1,3 +1,6 @@
+* Thu Jul 31 2014 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.2.0-1
+- require libpyloncam 0.4.0
+- update to modified libpyloncam API
 * Wed Apr 9 2014 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.1.1-1
 - remove unneeded memory allocation
 - require libpyloncam 0.3.0
