--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,36 @@
 Changelog
 =========
 
+Changes in libuca 2.3.0
+-----------------------
+
+Released on April 20th 2018.
+
+Enhancements:
+
+- Besides CMake we now also support meson
+- mock: provide setter/getter for test-enum
+- mock: add a custom enum type for test purposes
+- mock: receive SIGUSR1 to simulate external trigger
+- grab: measure time per frame grab
+- grab: allow filename to be a format specifier
+- grab: show progress during acquisition
+- gui: use glib-resources to bake in UI
+
+Fixes:
+
+- Parse enum properties properly
+- Stop construction and exit early on error
+
+Breaks and changes:
+
+- Raise minimum GLib version to 2.38
+- Abort construction if props cannot be parsed
+- grab: drop --write-tiff and guess from file suffix
+- grab: drop support for --duration
+- grab: do not write at all if --output is not given
+
+
 Changes in libuca 2.2.1
 -----------------------
 
